syntax = "proto3";

option csharp_namespace = "ClientGRPC";

package product;

// The greeting service definition.
service Product {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Get(ProductsRequest) returns (ProductsReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message ProductsRequest{}
message ProductsReply{
	repeated string product = 1;
}
